<resources>
    <string name="app_name">CarboneVert</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">CarboneVert</string>
    <string name="search">Search</string>
    <string name="transport">Transportation</string>
    <string name="food_lifecycle">Food Lifecycle</string>
    <string name="vehicles">Vehicles</string>
    <string name="last_week">Last week</string>
    <string name="last_month">Last month</string>
    <string name="last_year">Last year</string>
    <string name="custom">Custom</string>
    
    <string name="search_label">Search</string>
    <string name="search_hint">Search</string>
    <string name="from">From :</string>
    <string name="to">To :</string>
    <string name="show">Show</string>
    <string name="source_transport">Source : Transportation</string>
    <string name="propreties">Propreties</string>
    <string name="calculator">Calculator</string>
    <string name="scheduling">Scheduling</string>
    <string name="date">Date</string>
    <string name="repeat">Repeat</string>
    <string name="notes">Notes</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="addToMyActivities">Add to My Activities</string>
</resources>