<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- Screen Design for Photos -->

	<Button
	    android:id="@+id/weekButton"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:drawableRight="@drawable/ic_next_icon"
	    android:text="@string/last_week" />

    <Button
        android:id="@+id/monthButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/ic_next_icon"
        android:text="@string/last_month" />

    <Button
        android:id="@+id/yearButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/ic_next_icon"
        android:text="@string/last_year" />

    <Button
        android:id="@+id/customButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/ic_next_icon"
        android:text="@string/custom" />

</LinearLayout>