<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/eScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <include
            android:id="@+id/productView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/_product_layout" />

        <TextView
            style="@style/Title"
            android:text="@string/date" />

        <DatePicker
            android:id="@+id/activityEditDatePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <TextView
            style="@style/Title"
            android:text="@string/repeat" />

        <Spinner
            android:id="@+id/activityEditRepeatSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <TextView
            style="@style/Title"
            android:text="@string/notes" />

        <EditText
            android:id="@+id/activityEditNotesEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:ems="10"
            android:inputType="textMultiLine"
            android:maxLines="4"
            android:minLines="2" >

        </EditText>

	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:layout_marginTop="15dip"
	        android:orientation="horizontal" >
        
            <Button
                android:id="@+id/activityEditSaveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginRight="25dip"
                android:text="@string/save"
                android:textSize="20dp" />

            <Button
                android:id="@+id/activityEditCancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/cancel"
                android:textSize="20dp" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>